--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-:root{
+root{
     --cor-fundo: #6e046e;
-    --cor-principal: #0059ff;
-    --cor-secundaria: #f10048; 
+    --cor-principal: #6f00ff;
+    --cor-secundaria: #b4aaae; 
     --cor-destaque: #00ff73;
     --cor-texto: #0c151600;
 
