--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-fundo: #08a858;
+    --cor-fundo: #FF1E1E1E;
     --cor-principal: #6f00ff;
     --cor-secundaria: #b4aaae; 
     --cor-destaque: #00ff73;
