--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #FF1E1E1E;
-    --cor-principal: #6f00ff;
-    --cor-secundaria: #b4aaae; 
-    --cor-destaque: #00ff73;
-    --cor-texto: #0c151600;
+    --cor-fundo: #0000001e;
+    --cor-principal: #bd91f7;
+    --cor-secundaria: #8359f7; 
+    --cor-destaque: #33f88c;
+    --cor-texto: #3ee4f7;
 
 }
 
