--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #bd91f7;
     --cor-secundaria: #8359f7; 
     --cor-destaque: #33f88c;
-    --cor-texto: #3ee4f7;
+    --cor-texto: #04046d;
 
 }
 
